# esp_32_learning_project

./: CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  app_nvs.c  app_nvs.h  http_server.c  http_server.h  main.c  rgb_led.c  rgb_led.h  tasks_common.h  wifi_app.c  wifi_app.h  wifi_reset_button.c  wifi_reset_button.h
main/dac/: dac_app.c  dac_app.h
main/dht_22/: DHT22.c  DHT22.h
main/pcnt/: pcnt_app.c  pcnt_app.h
main/webpage/: app.css  app.js  index.html
